前端主体完成。

--- a/www/ips.css
+++ b/www/ips.css
@@ -1,8 +1,8 @@
 /** ELEMENT POSITIONS **/
-#dev0 { top:176px;left:180; }
+/*#dev0 { top:176px;left:180; }
 #dev1 { top:148px; right:10%; }
 #dragDropWindow3 { top:340px; left:8%; }
-#dragDropWindow4 { top:416px; right:40%}
+#dragDropWindow4 { top:416px; right:40%}*/
 
 /** ELEMENTS **/
 .drag-drop-demo .window {  
