--- a/www/ips.css
+++ b/www/ips.css
@@ -1,181 +1,78 @@
-/** ELEMENT POSITIONS **/
-/*#dev0 { top:176px;left:180; }
-#dev1 { top:148px; right:10%; }
-#dragDropWindow3 { top:340px; left:8%; }
-#dragDropWindow4 { top:416px; right:40%}*/
-
-/** ELEMENTS **/
-.drag-drop-demo .window {  
-    font-family:serif;
-    font-style:italic;
-    padding-top:5px; 
-    line-height:13px;    
+html {
+  height: 100%;
+}
+body {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  background-image: url(images/appvis-bg.png);
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: helvetica, san-serif;
+}
+.node {
+  -webkit-border-radius: 48px;
+  -moz-border-radius: 48px;
+  border-radius: 48px;
+  background: #067195;
+  border: 2px solid #FFF;
+  box-shadow: 0 0 5px #888;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  -webkit-backface-visibility: hidden;
+}
+.node h4 {
+  color: #067195;
+  text-shadow: -1px -1px 0 #ffffff, 1px -1px 0 #ffffff, -1px 1px 0 #ffffff, 1px 1px 0 #ffffff;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  width: 56px;
+  left: 56px;
+  bottom: 0;
+  font-size: 11px;
+}
+.node.animate {
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+.node:hover {
+  cursor: pointer;
+}
+.node.dragging {
+  z-index: 99;
+}
+.segment {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #bae4b3;
+  z-index: 1;
+  -webkit-transform-origin: 0 100%;
+  -moz-transform-origin: 0 100%;
+  -ms-transform-origin: 0 100%;
+  transform-origin: 0 100%;
+  border: 1px solid white;
+  border-right: 0;
+  -webkit-backface-visibility: hidden;
+}
+.segment .endpoint {
+  position: absolute;
+  top: -9px;
 }
 
-.drag-drop-demo a, .drag-drop-demo a:visited {
-    color:#057D9F;
+#projectlist {
+  width: 80px;
 }
 
-.drag-drop-demo a:hover {
-    color:orange;
-}
-
-/** LINKS IN WINDOWS **/
-.drag-locked { border:1px solid red; }
-.cmdLink { font-size:0.80em;}
-
-/** DRAG/DROP CLASSES **/
-.dragActive { border:2px dotted orange; }
-.dropHover { border:1px dotted red; }
-
-/** INFO WINDOW **/
-#list {
-    text-align:center;
-    display:none;
-    font-size:90%;
-    position:absolute;
-    width:250px;
-    left:30%;
-    top:100px;
-    background-color:white;
-    padding:5px;
-    border:1px solid #456;
-    opacity:0.8;
-    border-radius:8px;
-    color:#444;
-}
-#list table { width:100%;}
-#list table th, #list strong { color:black; font-size:12px;}
-
-#main {
-    margin-top: 10px;
-    width: 1000px;
-}
-
-.left {
-    position: absolute;
-    margin-top: 0;
-    top: 64px;
-    border:2px solid #aaa;
-    width: 160px;
-    height: 560px;
-}
-
-.left .headline {
-    margin: 5px 0;
-    font-size: 12px;
-}
-
-.demo {
-    margin-left: 166px;
-    margin-top: 0;
-    top: 64px;
-    border:2px solid #aaa;
-    width: 830px;
-    height: 560px;
-    text-align: center;
-}
-
-.devinfo {
-    /*text-align: left;*/
-    padding-left: 5px;
-/*    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 240px;
-    border-top:2px solid #aaa;*/
-}
-
-.ips_table {
-    text-align: left;
-}
-
-input {
-    width: 90px;
-    border:1px solid #aaa;*/
-}
-
-/*#drate {
-    width: 55px;
-}
-*/
-#drate, #dnum, #dstart, #dend {
-    width: 75px;
-}
-
-.window {
-    height: 50px;
-    width: 50px;
-    top:100px;
-    left:100px;
-    padding: 1px;
-    border:none;
-    /*background: none;*/
-}
-
-.window img {
-    /*width: 100%;*/
-    height: 100%;
-}
-
-.ips_btn {
-    display: inline-block;
-    /*width: 60px;*/
-    /*margin-left: 20px;*/
-    margin: 5px 0;
-    font-size: 12px;
-}
-
-.ips_btn:hover {
-    color: #888;
-}
-
-.ips_img {
-    width: 50px;
-}
-
-.explanation {
-    height: auto;
-    padding-bottom: 10px;
-}
-
-.explanation h4 {
-    font-size: 24px;
-    margin: 10px 0;
-}
-
-.div_anchor {
-    position: absolute;
-    height: 10px;
-    width: 10px;
-    top: 20px;
-    left: 20px;
-}
-
-
-.modal {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-color: #ddd;
-    display: none;
-    z-index: 9999;
-}
-
-.drawdiv {
-    margin: 80px auto 0;
-    width: 720px;
-    z-index: 9999;
-}
-
-#placeholder {
-    width:720px;
-    height:400px;
-}
-
-.warning_font {
-	position: relative;
-	top: -45px;
+.infoPanel {
+  position: fixed;
+  top: 30px;
+  right: 30px;
+  width: 200px;
+  height: 200px;
+  background-color: #ccc;
 }
